<!--
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    tools:context=".MainActivity" >
-->
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:fillViewport="true">

    <LinearLayout
        android:id="@+id/mainLayout"
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:orientation="vertical" >

        <LinearLayout
            android:id="@+id/layoutServer"
            android:layout_width="match_parent"
            android:layout_height="50dip"
            android:orientation="horizontal"
            android:padding="5dip" >

            <LinearLayout
                android:id="@+id/layoutServer1"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:orientation="horizontal">
                <TextView
                    android:id="@+id/textServer"
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:gravity="center_vertical"
                    android:text="@string/txtServer" />

                <EditText
                    android:id="@+id/editServer"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:inputType="text" />
            </LinearLayout>
            
            <Button
                android:id="@+id/btnServerSet"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:text="@string/btnServerSet" />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/layoutDevID"
            android:layout_width="match_parent"
            android:layout_height="50dip"
            android:orientation="horizontal"
            android:padding="5dip" >

            <TextView
                android:id="@+id/textViewDevID"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:gravity="center_vertical"
                android:text="@string/txtDevID" />

            <EditText
                android:id="@+id/editDevID"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:inputType="text" />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/layoutCnnt"
            android:layout_width="match_parent"
            android:layout_height="50dip"
            android:orientation="horizontal"
            android:padding="5dip" >

            <Button
                android:id="@+id/btnStart"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="0.5"
                android:text="@string/btnStart" />

            <Button
                android:id="@+id/btnStop"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="0.5"
                android:text="@string/btnStop" />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/layoutVideo"
            android:layout_width="match_parent"
            android:layout_height="360dip"
            android:background="#ff000000"
            android:orientation="vertical" >
        </LinearLayout>
        
        <LinearLayout
            android:id="@+id/layoutMessage"
            android:layout_width="match_parent"
            android:layout_height="50dip"
            android:orientation="horizontal"
            android:padding="5dip" >

            <LinearLayout
                android:id="@+id/layoutMsg1"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:orientation="horizontal">
	            <EditText
	                android:id="@+id/editMsg"
	                android:layout_width="match_parent"
	                android:layout_height="match_parent"
	                android:inputType="text" />
	        </LinearLayout>

            <Button
                android:id="@+id/btnSend"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:text="@string/btnSend" />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/layoutCtrl"
            android:layout_width="match_parent"
            android:layout_height="50dip"
            android:orientation="horizontal"
            android:padding="5dip" >

            <Button
                android:id="@+id/btnCamera"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="0.25"
                android:text="@string/btnCamera" />

            <Button
                android:id="@+id/btnScan"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="0.25"
                android:text="@string/btnScan" />

            <Button
                android:id="@+id/btnViewWhole"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="0.25"
                android:text="@string/btnWhole" />
            
            <Button
                android:id="@+id/btnViewCut"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="0.25"
                android:text="@string/btnCut" />

        </LinearLayout>

        <LinearLayout
            android:id="@+id/layoutTransferBtn"
            android:layout_width="match_parent"
            android:layout_height="50dip"
            android:orientation="horizontal"
            android:padding="5dip" >

            <Button
                android:id="@+id/btnPut"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="3"
                android:text="@string/btnPut" />
            <Button
                android:id="@+id/btnGet"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="3"
                android:text="@string/btnGet" />

            <Button
                android:id="@+id/btnCancel"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="3"
                android:text="@string/btnCancel" />

        </LinearLayout>
		
        <LinearLayout android:id="@+id/layoutTransferInfo"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical" >

            <TextView
                android:id="@+id/TransferInfo"
                android:layout_width="match_parent"
                android:layout_height="60dip"
                android:layout_weight="0.7"
                android:text="" />

            <TextView
                android:id="@+id/StatusInfo"
                android:layout_width="match_parent"
                android:layout_height="60dip"
                android:layout_weight="0.7"
                android:text="" />


            <TextView
                android:id="@+id/debug"
                android:layout_width="match_parent"
                android:layout_height="300dip"
                android:layout_weight="0.7"
                android:text="" />

        </LinearLayout>
       
    </LinearLayout>

</ScrollView>

<!-- </RelativeLayout> -->
